Fix: corrected CSS paths for local file loading

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       rel="stylesheet"
       href="https://unpkg.com/swiper/swiper-bundle.min.css"
     />
-    <link rel="stylesheet" href="/css/reset.css" />
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <div class="container">
@@ -68,7 +68,7 @@
             <img
               class="top-bar__user-icon"
               alt="User profile icon"
-              src="/assets/images/user.svg"
+              src="assets/images/user.svg"
             />
             <p class="top-bar__user-role">FRONTEND DEVELOPER</p>
           </div>
@@ -335,7 +335,6 @@
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="js/script.js" defer></script>
     
-    <!-- Product Modal -->
     <div class="product-modal" id="productModal">
       <div class="product-modal__overlay"></div>
       <div class="product-modal__content">
