Fix: responsiveness, semantic, and small issues

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div class="container">
-      <section class="top-bar">
+      <header class="top-bar">
         <div class="top-bar__left">
           <div class="top-bar__logo">
             <img
@@ -130,225 +130,248 @@
             </ul>
           </nav>
         </div>
-      </section>
+      </header>
 
-      <section id="home" class="hero">
-        <div class="hero__logo">
-          <img
-            class="hero__logo-img"
-            alt="Forma'sint logo"
-            src="assets/images/logo_forma.svg"
-          />
-        </div>
-        <div class="hero__banner">
-          <img
-            class="hero__banner-img"
-            alt="Hero banner showcasing products"
-            src="assets/images/hero.jpg"
-          />
-        </div>
-      </section>
+      <main>
+        <section id="home" class="hero">
+          <div class="hero__logo">
+            <img
+              class="hero__logo-img"
+              alt="Forma'sint logo"
+              src="assets/images/logo_forma.svg"
+            />
+          </div>
+          <div class="hero__banner"></div>
+        </section>
 
-      <section id="featured-products" class="featured-products">
-        <p class="featured-products__subtitle">FEATURED PRODUCTS</p>
-        <h1 class="featured-products__title">Browse featured</h1>
-        <div class="swiper-container featured-products__swiper">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide">
-              <div class="featured-products__item">
-                <div
-                  class="featured-products__item-image-container tag-bestseller"
-                >
-                  <img
-                    class="featured-products__item-img"
-                    alt="Dark blue alpine climbing jacket"
-                    src="https://brandstestowy.smallhost.pl/KURTKA_01.png"
-                  />
-                  <button
-                    class="featured-products__item-favorite"
-                    aria-label="Add to favorites"
-                    tabindex="0"
+        <section id="featured-products" class="featured-products">
+          <header class="featured-products__header">
+            <p class="featured-products__subtitle">FEATURED PRODUCTS</p>
+            <h1 class="featured-products__title">Browse featured</h1>
+          </header>
+          <div class="swiper-container featured-products__swiper">
+            <div class="swiper-wrapper">
+              <article class="swiper-slide">
+                <div class="featured-products__item">
+                  <div
+                    class="featured-products__item-image-container tag-bestseller"
                   >
                     <img
-                      src="assets/images/favorite.svg"
-                      alt="Add to favorites"
-                      id="featured-products__item-favorite__image"
+                      class="featured-products__item-img"
+                      alt="Dark blue alpine climbing jacket"
+                      src="https://brandstestowy.smallhost.pl/KURTKA_01.png"
                     />
-                  </button>
+                    <button
+                      class="featured-products__item-favorite"
+                      aria-label="Add to favorites"
+                      tabindex="0"
+                    >
+                      <img
+                        src="assets/images/favorite.svg"
+                        alt="Add to favorites"
+                        id="featured-products__item-favorite__image"
+                      />
+                    </button>
+                  </div>
+                  <p class="featured-products__item-name">
+                    Dark blue alpine climbing jacket
+                  </p>
+                  <p class="featured-products__item-price">€300,00 EUR</p>
                 </div>
-                <p class="featured-products__item-name">
-                  Dark blue alpine climbing jacket
-                </p>
-                <p class="featured-products__item-price">€300,00 EUR</p>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="featured-products__item">
-                <div
-                  class="featured-products__item-image-container tag-limited-edition"
-                >
-                  <img
-                    class="featured-products__item-img"
-                    alt="Red alpine jacket"
-                    src="https://brandstestowy.smallhost.pl/KURTKA_02.png"
-                  />
-                  <button
-                    class="featured-products__item-favorite"
-                    aria-label="Add to favorites"
-                    tabindex="0"
+              </article>
+              <article class="swiper-slide">
+                <div class="featured-products__item">
+                  <div
+                    class="featured-products__item-image-container tag-limited-edition"
                   >
                     <img
-                      src="assets/images/favorite.svg"
-                      alt="Add to favorites"
-                      id="featured-products__item-favorite__image"
+                      class="featured-products__item-img"
+                      alt="Red alpine jacket"
+                      src="https://brandstestowy.smallhost.pl/KURTKA_02.png"
                     />
-                  </button>
+                    <button
+                      class="featured-products__item-favorite"
+                      aria-label="Add to favorites"
+                      tabindex="0"
+                    >
+                      <img
+                        src="assets/images/favorite.svg"
+                        alt="Add to favorites"
+                        id="featured-products__item-favorite__image"
+                      />
+                    </button>
+                  </div>
+                  <p class="featured-products__item-name">Red alpine jacket</p>
+                  <p class="featured-products__item-price">€350,00 EUR</p>
                 </div>
-                <p class="featured-products__item-name">Red alpine jacket</p>
-                <p class="featured-products__item-price">€350,00 EUR</p>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="featured-products__item">
-                <div class="featured-products__item-image-container">
-                  <img
-                    class="featured-products__item-img"
-                    alt="item"
-                    src="https://brandstestowy.smallhost.pl/KURTKA_03.png"
-                  />
-                  <button class="featured-products__item-favorite" tabindex="0">
+              </article>
+              <article class="swiper-slide">
+                <div class="featured-products__item">
+                  <div class="featured-products__item-image-container">
                     <img
-                      src="assets/images/favorite.svg"
-                      alt="Add to favorites"
-                      id="featured-products__item-favorite__image"
+                      class="featured-products__item-img"
+                      alt="item"
+                      src="https://brandstestowy.smallhost.pl/KURTKA_03.png"
                     />
-                  </button>
+                    <button
+                      class="featured-products__item-favorite"
+                      tabindex="0"
+                    >
+                      <img
+                        src="assets/images/favorite.svg"
+                        alt="Add to favorites"
+                        id="featured-products__item-favorite__image"
+                      />
+                    </button>
+                  </div>
+                  <p class="featured-products__item-name">
+                    Green alpine jacket
+                  </p>
+                  <p class="featured-products__item-price">€380,00 EUR</p>
                 </div>
-                <p class="featured-products__item-name">Green alpine jacket</p>
-                <p class="featured-products__item-price">€380,00 EUR</p>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="featured-products__item">
-                <div
-                  class="featured-products__item-image-container tag-bestseller"
-                >
-                  <img
-                    class="featured-products__item-img"
-                    alt="item"
-                    src="https://brandstestowy.smallhost.pl/KURTKA_04.png"
-                  />
-                  <button class="featured-products__item-favorite" tabindex="0">
+              </article>
+              <article class="swiper-slide">
+                <div class="featured-products__item">
+                  <div
+                    class="featured-products__item-image-container tag-bestseller"
+                  >
                     <img
-                      src="assets/images/favorite.svg"
-                      alt="Add to favorites"
-                      id="featured-products__item-favorite__image"
+                      class="featured-products__item-img"
+                      alt="item"
+                      src="https://brandstestowy.smallhost.pl/KURTKA_04.png"
                     />
-                  </button>
+                    <button
+                      class="featured-products__item-favorite"
+                      tabindex="0"
+                    >
+                      <img
+                        src="assets/images/favorite.svg"
+                        alt="Add to favorites"
+                        id="featured-products__item-favorite__image"
+                      />
+                    </button>
+                  </div>
+                  <p class="featured-products__item-name">
+                    Black alpine jacket
+                  </p>
+                  <p class="featured-products__item-price">€400,00 EUR</p>
                 </div>
-                <p class="featured-products__item-name">Black alpine jacket</p>
-                <p class="featured-products__item-price">€400,00 EUR</p>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="featured-products__item">
-                <div
-                  class="featured-products__item-image-container tag-limited-edition"
-                >
-                  <img
-                    class="featured-products__item-img"
-                    alt="item"
-                    src="https://brandstestowy.smallhost.pl/KURTKA_05.png"
-                  />
-                  <button class="featured-products__item-favorite" tabindex="0">
+              </article>
+              <article class="swiper-slide">
+                <div class="featured-products__item">
+                  <div
+                    class="featured-products__item-image-container tag-limited-edition"
+                  >
                     <img
-                      src="assets/images/favorite.svg"
-                      alt="Add to favorites"
-                      id="featured-products__item-favorite__image"
+                      class="featured-products__item-img"
+                      alt="item"
+                      src="https://brandstestowy.smallhost.pl/KURTKA_05.png"
                     />
-                  </button>
+                    <button
+                      class="featured-products__item-favorite"
+                      tabindex="0"
+                    >
+                      <img
+                        src="assets/images/favorite.svg"
+                        alt="Add to favorites"
+                        id="featured-products__item-favorite__image"
+                      />
+                    </button>
+                  </div>
+                  <p class="featured-products__item-name">Blue alpine jacket</p>
+                  <p class="featured-products__item-price">€350,00 EUR</p>
                 </div>
-                <p class="featured-products__item-name">Blue alpine jacket</p>
-                <p class="featured-products__item-price">€350,00 EUR</p>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="featured-products__item">
-                <div
-                  class="featured-products__item-image-container tag-bestseller"
-                >
-                  <img
-                    class="featured-products__item-img"
-                    alt="item"
-                    src="https://brandstestowy.smallhost.pl/KURTKA_02.png"
-                  />
-                  <button class="featured-products__item-favorite" tabindex="0">
+              </article>
+              <article class="swiper-slide">
+                <div class="featured-products__item">
+                  <div
+                    class="featured-products__item-image-container tag-bestseller"
+                  >
                     <img
-                      src="assets/images/favorite.svg"
-                      alt="Add to favorites"
-                      id="featured-products__item-favorite__image"
+                      class="featured-products__item-img"
+                      alt="item"
+                      src="https://brandstestowy.smallhost.pl/KURTKA_02.png"
                     />
-                  </button>
+                    <button
+                      class="featured-products__item-favorite"
+                      tabindex="0"
+                    >
+                      <img
+                        src="assets/images/favorite.svg"
+                        alt="Add to favorites"
+                        id="featured-products__item-favorite__image"
+                      />
+                    </button>
+                  </div>
+                  <p class="featured-products__item-name">
+                    Yellow alpine jacket
+                  </p>
+                  <p class="featured-products__item-price">€320,00 EUR</p>
                 </div>
-                <p class="featured-products__item-name">Yellow alpine jacket</p>
-                <p class="featured-products__item-price">€320,00 EUR</p>
-              </div>
+              </article>
+            </div>
+            <div class="swiper-button-next" aria-label="Next slide"></div>
+            <div class="featured-products__progress-bar">
+              <div class="featured-products__progress-fill"></div>
             </div>
           </div>
-          <div class="swiper-button-next" aria-label="Next slide"></div>
-          <div class="featured-products__progress-bar">
-            <div class="featured-products__progress-fill"></div>
-          </div>
-        </div>
-      </section>
+        </section>
 
-      <section id="product-listing" class="product-listing">
-        <div class="product-listing__count">
-          <label
-            for="product-count-select"
-            id="product-count-select"
-            class="product-listing__count-text"
-            aria-label="Select number of products per page"
-          >
-            NUMBER OF PRODUCTS PER PAGE
-          </label>
+        <section id="product-listing" class="product-listing">
+          <header class="product-listing__header">
+            <div class="product-listing__count">
+              <label
+                for="product-count-select"
+                id="product-count-select"
+                class="product-listing__count-text"
+                aria-label="Select number of products per page"
+              >
+                NUMBER OF PRODUCTS PER PAGE
+              </label>
 
-          <div class="product-listing__select-wrapper">
-            <div class="product-listing__select" tabindex="0">
-              <div class="product-listing__select-trigger">14</div>
-              <div class="product-listing__options">
-                <div
-                  class="product-listing__option product-listing__option--selected"
-                  data-value="14"
-                >
-                  14
+              <div class="product-listing__select-wrapper">
+                <div class="product-listing__select" tabindex="0">
+                  <div class="product-listing__select-trigger">14</div>
+                  <div class="product-listing__options">
+                    <div
+                      class="product-listing__option product-listing__option--selected"
+                      data-value="14"
+                    >
+                      14
+                    </div>
+                    <div class="product-listing__option" data-value="24">
+                      24
+                    </div>
+                    <div class="product-listing__option" data-value="36">
+                      36
+                    </div>
+                  </div>
                 </div>
-                <div class="product-listing__option" data-value="24">24</div>
-                <div class="product-listing__option" data-value="36">36</div>
               </div>
             </div>
-          </div>
-        </div>
-        <div class="product-listing__grid"></div>
-      </section>
+          </header>
+          <div class="product-listing__grid"></div>
+        </section>
+      </main>
     </div>
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <script src="js/script.js" defer></script>
-    
-    <div class="product-modal" id="productModal">
+
+    <dialog class="product-modal" id="productModal">
       <div class="product-modal__overlay"></div>
       <div class="product-modal__content">
-        <button class="product-modal__close" aria-label="Close modal">
-          <img src="assets/images/close_icon.svg" alt="Close" />
-          <p>CLOSE</p>
-        </button>
         <div class="product-modal__image-container">
+          <button class="product-modal__close" aria-label="Close modal">
+            <img src="assets/images/close_icon.svg" alt="Close" />
+            <p>CLOSE</p>
+          </button>
           <img class="product-modal__image" alt="Product image" />
-        </div>
-        <div class="product-modal__details">
-          <p class="product-modal__id"></p>
+          <div class="product-modal__details">
+            <p class="product-modal__id"></p>
+          </div>
         </div>
       </div>
-    </div>
+    </dialog>
+
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="js/script.js" defer></script>
   </body>
 </html>
